AAA Legacy/v3.1/changelog.md
# 1.0 - Initial features
- Zoom
- Change Background Color
- Transparent Export + Bulk Export
- Singular/All/Custom frame number preview
- Fashion palette exporter (for fun! :3c )
- All characters supported
- All jobs supported
- All vanilla (and custom, technically!) hair supported
- Debugging preview supported
- All fashion automatically sorts and categorizes by index
- All custom fashion is automatically marked as (C)
- Arrow keys to change the frames quickly (or buttons if you like!)

# 1.1 - Emergency Bugfix
- Fixed directory issue
- Fixed background coloring issue in All/Custom preview
- Added proper readme
- Added changelog
- Added new launcher debugger
- Added bat file for launching

# 2.0 - Straight Jump to the Next Level
- Live Pal Editing and Saving
- Multiselect for Pal Saving
- Bugfixes with Dragon 3rd Job UI
- VGA Output Support
- Save Custom Color Indexes
- Automatic refresh of custom pal folder
- Brightness/Hue/Saturation Sliders for Pal Editing

# 2.1 - Bug fixes
- Fixed bug where editing a range of white and black colors would choke the sliders
- Added manual refresh button
- Fixed issue where sliders jitter and reset when dealing with specific colors
- Added window resizing feature (Mainly because Dragon 3rd job bugged again, resize to view the buttons)
- Renamed given custom pals to better showcase example "vanilla structure"
- Included a small tutorial made by Dino!

# 2.2 - Addtnl Hotfix
- Fixed bug where selecting first job Fox + purse only would result in an evil green taking over the hair

# 2.3 - Bug fixes
- Added warning when editing hair or base 3rd job fashion as it cannot be implemented in game
- Added supporting text for saved colors
- Fixed bug where editing third job dragon coat was not showing the correct indexes 
- Adjusted minimum window size to avoid some buttons disappearing when viewing third job lion/dragon

# 3.0 - Restructure, Rebuild, Reform
- Restructured folder so it's easier for players to read/use
- Renamed .bat files for user QoL
- Renamed previewer file to stop driving me insane with updating it
- Updated License
- Added frame labeling (and an option to disable it in the gears menu)
- Added custom specified frame range displaying and options (as well as user tip on the side)
- Added Option Button + rotating text to change Live Pal Editor's Saving Colors Mouse Options
- Added BMP v24 export support
- Added "User Choice Frame Export" so you can specify a frame to export as for pals, bmps, and pngs
- Added "MyShop" and "Portrait" Exports for BMP to ease teams' efforts (both export functions
    use your preferred BG color!) in addition to the base BMP export:
        "MyShop" = MyShop Portrait Display (103x103 res w/ padding of chosen bg color)
        "Portrait" = Regular RClick Illustration (105x105 res w/ corners of chosen bg color)
- Expanded options for custom pal names to span up infinite numbers. Why? Why the hell not. It only 
    accepted up to 2 before.
- Made frame selected persist between "Single" and "Custom" modes
- Made Expanded Custom Preview Options gear menu to automatically set preview mode to "Custom"
- Fixed Paula Fashion Labeling
- Fixed UI a bit to fit the window a bit better

# 3.1 - Emergency Bugfix and what have you
- Added additional user control over BMP output regarding background
- Added palette export options in Custom Preview Options Menu for more artist colorpicking ease
- Fixed MyShop Portrait Display to be 135x135--proper MyShop resolution
- Fine-tuned the new UI on the Custom Preview Options Menu
- Fixed Custom Frame Display being finnicky with numbers (the numbers, Mason, what do they mean?!?!?)
- Fixed User Chosen Frame Export being turned on by default and causing problems
